<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_20px"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_help_24px"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24px"
            android:title="@string/exit" />

    </group>
</menu>